--- a/index.css
+++ b/index.css
@@ -6,18 +6,18 @@ body{
   padding: 50px;
   display: flex;
   justify-content: center;
-  background-color: #444444;
-  color:rgba(255,255,255,0.8);
+  background-color: #8bc9b2;
+  color:rgba(51, 51, 51,0.9);
   font-size: 15px;
   line-height:28px;
   letter-spacing:2px;
-  font-weight: 200;
+  font-weight: 400;
 }
 
 /* 複寫區 */
 ul{
   padding: 0;
-  list-style:none;
+  list-style: none;
 }
 p{
     opacity: 0.8;
@@ -37,7 +37,7 @@ h2::after{
   display: inline-block;
   width: 20px;
   height: 8px;
-  background-color: #ff6666;
+  background-color: #fca4a4;
   margin-left: 10px;
 }
 h3{
@@ -61,7 +61,7 @@ a{
 }
 hr{
   border: none;
-  border-bottom: solid 4px #ff6666;
+  border-bottom: solid 4px #fca4a4;
   width: 70%;
   margin-left: 0;
 }
@@ -76,10 +76,12 @@ hr{
 }
 .left{
   flex:5;
-  border-right:solid 1px #ff6666;
+  border-right:solid 1px #fca4a4;
+  background-color: #8bc9b2
 }
 .right{
   flex:7;
+  background-color: #d6dbdb;
 }
 .left,.right{
   padding: 15px;
@@ -93,20 +95,19 @@ hr{
   overflow: hidden;
 }
 .decoration{
-  width: 300px;
-  height: 140px;
-  background: linear-gradient(135deg,#ff6666,#fca4a4);
-  border-radius:70px 0px 0px 70px;
+  width: 150px;
+  height: 150px;
+  background: linear-gradient(135deg,#fca4a4,#ffd3d3);
+  border-radius: 50%;
   position: absolute;
-  right: 0px;
-  top: 50px;
-  transform: translateX(35px) translateY(-30px) rotate(-15deg);
+  right: 550px;
+  top: -35px;
 }
 .decoration2{
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  background: linear-gradient(165deg,#ff6666,#fca4a4);
+  background: linear-gradient(165deg,#fca4a4,#ffd3d3);
   position: absolute;
   right: 800px;
   bottom: -35px;
@@ -115,17 +116,17 @@ hr{
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  background: linear-gradient(150deg,#ff6666,#fca4a4);
+  background: linear-gradient(150deg,#fca4a4,#ffd3d3);
   position: absolute;
   right: -60px;
   bottom: 200px;
 }
 .profile{
     position: absolute;
-    width: 200px;
+    width: 180px;
     border-radius: 50%;
-    top: 35px;
-    left: 500px;
+    top: 85px;
+    right: 120px;
 }
 
 .listExperience>li{
@@ -145,6 +146,24 @@ hr{
   border-color:#f9a4a4;
 }
 .listExperience li ul{
+  padding-left: 10px;
+  margin-left: 10px; 
+  border-left: solid 3px white; 
+} 
+.listPortfolio>li{
+  display: flex;
+  margin-bottom: 10px; 
+}
+.listPortfolio>li:nth-child(1) ul{
+  border-color:#fc5d5d;
+}
+.listPortfolio>li:nth-child(2) ul{
+  border-color:#fc7676;
+}
+.listPortfolio>li:nth-child(3) ul{
+  border-color:#f98686;
+}
+.listPortfolio li ul{
   padding-left: 10px;
   margin-left: 10px;
   border-left: solid 3px white;
@@ -173,12 +192,12 @@ hr{
   border-radius:50%;
   position: relative;
   overflow: hidden;
-  background-color: rgba(255, 102, 102,0.4);
+  background-color: rgba(252, 93, 93,0.5);
 }
 .circle::after{
   content:"";
   display: block;
-  background-color: #444444;
+  background-color: #8bc9b2;
   width: calc(100% - 20px);
   height: calc(100% - 20px);
   border-radius:50%;
@@ -193,28 +212,28 @@ hr{
   position: absolute;
   left:50%;
   top: 0;
-  background-color: #ff6666;
+  background-color: #fc5d5d;
 }
 .p180{
   width: 50%;
   height: 100%;
   position: absolute;
   left: 50%;
-  background-color: #ff6666;
+  background-color: #fc5d5d;
 }
 .p270-1{
   width: 50%;
   height: 100%;
   position: absolute;
   left: 50%;
-  background-color: #ff6666;
+  background-color: #fc5d5d;
 }
 .p270-2{
   width: 50%;
   height: 50%;
   position: absolute;
   top: 50%;
-  background-color: #ff6666;
+  background-color: #fc5d5d;
 }
 
 
@@ -222,7 +241,7 @@ hr{
 .listProgram .bar{
   width: 150px;
   height: 10px;
-  border: solid 2px #ff6666;
+  border: solid 2px #7c7c7c;
   border-radius: 5px;
 }
 .listProgram li{
@@ -234,7 +253,7 @@ hr{
 .value{
   height: 100%;
   width: 60%;
-  background-color: #ff6666;
+  background-color: #fc5d5d;
 }
 .value.p10{
   width: 10%;
@@ -254,15 +273,44 @@ hr{
 .value.p70{
   width: 70%;
 }
+.value.p80{
+  width: 80%;
+}
 .value.p85{
   width: 85%;
 }
 
 .btn{
-  border: solid 3px #ff6666;
+  border: solid 3px #fc5d5d;
   padding:5px 10px;
   margin-right: 10px;
 }
 .fill{
-  background-color: #ff6666;
+  background-color: #fc5d5d;
+}
+.potfoliohref{
+  border-style: none;
+  background-color: #d6dbdb;
+  color: #7b504a;
+  cursor: pointer;
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: 2px;
+  font-weight: 400;
+  opacity:0.8;
+  border-radius: 8px;
+  opacity: 0.8;
+  padding: 5px;
+}
+.potfoliohref:focus{
+  outline: none;
+}
+.potfoliohref:hover{
+  filter: brightness(85%); 
+}
+.madebyscratch{
+  letter-spacing: 2.7px;
+}
+.madebygithub{
+  letter-spacing: 4.8px;
 }
